# terraform-guardrail

./: .gitignore  CHANGELOG.md  CLA.md  COMMERCIAL_USAGE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.registry  Dockerfile.streamlit  LICENSE  Makefile  NOTICE  README.md  RELEASE.md  RELEASE_NOTES.md  commands.md  custom_rules.md  docker-compose.yml  pyproject.toml  streamlit_app.py
.azure/: terraform-guardrail.yml
.github/workflows/: ado-extension.yml  chocolatey.yml  ci.yml  cla.yml  container.yml  guardrail.yml  homebrew.yml  packaging.yml  registry-container.yml  release.yml
.gitlab/: terraform-guardrail.yml
azure-devops-extension/: README.md  vss-extension.json
docs/: CLA_TEST.md  architecture.md  aws-codepipeline-architecture.md  docker-compose-guide.md  packaging.md  roadmap.md
docs/wiki/: AWS-CodePipeline.md  AWS-Support.md  Architecture.md  Azure-DevOps.md  CLI-Usage.md  Comparison.md  Compliance-Rules.md  Context-Aware-Evaluation.md  Cross-Provider-Invariants.md  Custom-Rules.md  Deliverables.md  Diagrams.md  Docker-Compose.md  Drift-Prevention.md  Enterprise-Features.md  Evidence-Export.md  Examples.md  GitHub-Action.md  GitLab-CI.md  Governance.md  Group-Level-Enforcement.md  Guardrails-as-a-Service.md  Home.md  Implementation-Plan.md  Licensing.md  MCP-Server.md  Org-Wide-Baselines.md  Packaging.md  Policy-Authoring-UI.md  Policy-Layering.md  Policy-Metadata.md  Policy-Packs.md  (+8 more)
examples/: main.tf  sample.tfstate
scripts/: install.sh
tests/: test_api.py  test_policy_eval.py  test_policy_layers.py  test_policy_registry.py  test_registry_api.py
(+44 files in other folders)
