[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terraform-guardrail"
version = "1.0.4"
description = "MCP-backed Terraform assistant with ephemeral-values compliance."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Huzefa Husain" }]
license = { text = "BUSL-1.1" }
keywords = ["terraform", "mcp", "iac", "security", "compliance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = [
  "fastapi>=0.110",
  "prometheus-client>=0.20",
  "uvicorn>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "python-hcl2>=4.3.4",
  "pydantic>=2.6",
  "requests>=2.31",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "git-cliff>=2.4.0",
  "httpx>=0.27",
]

[project.scripts]
terraform-guardrail = "terraform_guardrail.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
terraform_guardrail = ["web/templates/*.html", "web/static/*.css", "web/static/*.png"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
